k8s/80-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-ingress
  namespace: votehub
spec:
  podSelector:
    matchLabels:
      app: votehub-mongo
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: votehub-api
      ports:
        - protocol: TCP
          port: 27017
